# flash-trade-MCP

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  package.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
cli/: .env.example  CLAUDE.md  Cargo.toml  README.md
cli/src/: error.rs  main.rs
cli/src/cli/: config_cmd.rs  earn.rs  keys.rs  mod.rs  orders.rs  perps.rs
cli/src/commands/: add_collateral.rs  add_liquidity.rs  cancel_trigger_order.rs  close_position.rs  collect_fees.rs  decrease_size.rs  edit_limit_order.rs  edit_trigger_order.rs  increase_size.rs  markets.rs  mod.rs  open_position.rs  orders_view.rs  place_limit_order.rs  place_trigger_order.rs  pools.rs  portfolio.rs  positions.rs  price.rs  remove_collateral.rs  remove_liquidity.rs  stake.rs  trading_common.rs  unstake.rs
cli/src/core/: config.rs  mod.rs  pool_config.rs  prices.rs  rpc.rs  tx_engine.rs  wallet.rs
cli/src/enrichment/: mod.rs  order_enrichment.rs  position_enrichment.rs
cli/src/output/: colors.rs  formatter.rs  mod.rs  tables.rs
cli/tests/integration/: instruction_test.rs  mod.rs  price_test.rs
cli/tests/unit/: config_test.rs  enrichment_test.rs  mod.rs  output_test.rs  pool_config_test.rs  wallet_test.rs
mcp/: .env.example  CLAUDE.md  README.md  llms.txt  package.json
mcp/scripts/: live-round-trip.ts  sign-and-send.ts  smoke-test.sh  test-devnet.sh  test-mainnet.sh
mcp/src/: config.ts  index.ts  sanitize.ts
mcp/tests/: setup.ts
scripts/: build.sh  setup.sh
src/: index.ts
tests/: day0-compat.ts
(+60 files in other folders)
