[package]
name = "flash-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Flash Trade perpetuals protocol"

[[bin]]
name = "flash"
path = "src/main.rs"

[dependencies]
flash-sdk = { git = "https://github.com/flash-trade/flash-contracts-closed.git", branch = "feature/rust-sdk" }
anchor-lang = "0.32.1"
solana-sdk = "2.2"
solana-client = "2.2"
solana-account-decoder = "2.2"
solana-address-lookup-table-interface = "2.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
colored = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2"
anyhow = "1"
dirs = "5"
bs58 = "0.5"
chrono = "0.4"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dev-dependencies]
tempfile = "3"
